# processfox_web

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  PLAN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  docker.yml
backend/: Cargo.toml
backend/skills_builtin/document-read/: SKILL.md
backend/skills_builtin/document-write/: SKILL.md
backend/skills_builtin/folder-search/: SKILL.md
backend/skills_builtin/table-read/: SKILL.md
backend/skills_builtin/table-write/: SKILL.md
backend/src/: config.rs  crypto.rs  error.rs  lib.rs  llm.rs  main.rs  perm.rs  preview.rs  prompt.rs  ratelimit.rs  sandbox.rs  skills.rs  storage.rs  tools.rs  ws.rs
backend/src/auth/: extractor.rs  jwt.rs  mod.rs  token.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 0001_init.sql  0002_magic_link.sql  0003_workspace_files_unique.sql  0004_skills_resharded.sql  0005_agent_reasoning.sql  0006_workspace_member_role_removed.sql
backend/src/routes/: agents.rs  auth.rs  chat.rs  files.rs  mod.rs  secrets.rs  settings.rs  workspaces.rs
backend/src/storage/: mod.rs
backend/tests/: integration.rs
src/: App.tsx  globals.css
src/components/agent/: AgentEditorDialog.tsx  AgentSwitcher.tsx
src/components/chat/: ChatInput.tsx  ChatPane.tsx  HitlCard.tsx  MessageMarkdown.tsx  ReasoningChip.tsx  ToolCallChip.tsx
src/components/filetree/: FileTree.tsx
src/components/preview/: DocxViewer.tsx  ImageViewer.tsx  MarkdownEditor.tsx  PdfViewer.tsx  PptxViewer.tsx  PreviewHeader.tsx  PreviewPane.tsx  TextEditor.tsx  UnsupportedViewer.tsx  XlsxViewer.tsx  markdown-editor.css  previewKind.ts
src/components/settings/: CloudApisTab.tsx
src/components/ui/: DynamicIcon.tsx
src/components/workspace/: WorkspaceMembersDialog.tsx  WorkspaceSwitcher.tsx
src/hooks/: useAgentChat.ts  useAuth.ts
src/lib/: fileIcons.ts  tauri.ts
src/types/: agent.ts  auth.ts  chat.ts  file.ts  settings.ts  skill.ts
src/views/: Login.tsx  Main.tsx  Settings.tsx  Welcome.tsx
