[package]
name = "processfox-web"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "processfox-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "time",
  "json",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }

# Auth (Phase 2) — passwordless Magic-Link
jsonwebtoken = "9"
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }

# API-Key-Verschlüsselung (Phase 4) — AES-256-GCM
aes-gcm = "0.10"

# Chat-Streaming (Phase 6a)
futures-util = "0.3"

# Office-Preview (Phase 5)
calamine = "0.26"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"

# Office-Schreiben (Phase 6b-2b)
rust_xlsxwriter = "0.79"

[dev-dependencies]
# HTTP/DB-Integrationstests (Härtung): Axum-Handler via `tower::oneshot`
# gegen eine pro Test frische Postgres-DB (`#[sqlx::test]`).
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }

[profile.release]
# Auf Build-Geschwindigkeit + niedrigen Peak-RAM optimiert (2-vCPU-VPS).
# Kein LTO (spart den teuren Whole-Program-Link), opt-level 1 (für einen
# I/O-gebundenen Axum-Server praktisch ohne Laufzeit-Nachteil), viele
# codegen-units für mehr Parallelität.
opt-level = 1
lto = false
codegen-units = 256
incremental = false
strip = true
